force-app/main/default/objects/Student__c/fields/branch__c.field-meta.xml
<CustomField>
    <fullName>branch__c</fullName>
    <description>Stores the branch the student belongs to</description>
    <inlineHelpText>Student&apos;s branch of study.</inlineHelpText>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>