force-app/main/default/objects/Student__c/fields/ecedesc__c.field-meta.xml
<CustomField>
    <fullName>ecedesc__c</fullName>
    <description>Stores the branch description of the student.</description>
    <inlineHelpText>Stores the branch description of the student.</inlineHelpText>
    <label>ECE Desc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>