force-app/main/default/objects/Student__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>Stores the email of the student.</description>
    <inlineHelpText>Email of the student.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>