force-app/main/default/objects/Student__c/fields/mobile__c.field-meta.xml
<CustomField>
    <fullName>mobile__c</fullName>
    <description>Stores the mobile number of the student</description>
    <inlineHelpText>Mobile Number of the student.</inlineHelpText>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>