force-app/main/default/objects/Student__c/fields/subjects__c.field-meta.xml
<CustomField>
    <fullName>subjects__c</fullName>
    <description>Stores the subjects the student needs to study</description>
    <inlineHelpText>Subjects the student needs to study</inlineHelpText>
    <label>Subjects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECE - 1</fullName>
            </value>
            <value>
                <fullName>ECE - 2</fullName>
            </value>
            <value>
                <fullName>ECE - 3</fullName>
            </value>
            <value>
                <fullName>ECE - 4</fullName>
            </value>
            <value>
                <fullName>EEE - 1</fullName>
            </value>
            <value>
                <fullName>EEE - 2</fullName>
            </value>
            <value>
                <fullName>CSE - 1</fullName>
            </value>
            <value>
                <fullName>CSE - 2</fullName>
            </value>
            <value>
                <fullName>CSE - 3</fullName>
            </value>
            <value>
                <fullName>CSE - 4</fullName>
            </value>
            <value>
                <fullName>IT - 1</fullName>
            </value>
            <value>
                <fullName>IT - 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>