force-app/main/default/objects/Student__c/recordTypes/CSEStudent.recordType-meta.xml
<RecordType>
    <fullName>CSEStudent</fullName>
    <active>true</active>
    <description>Computer Science &amp; Engineering.</description>
    <label>CSE Student</label>
</RecordType>