force-app/main/default/objects/Student__c/recordTypes/ECEStudent.recordType-meta.xml
<RecordType>
    <fullName>ECEStudent</fullName>
    <active>true</active>
    <description>Electronics &amp; Communication Engineering.</description>
    <label>ECE Student</label>
</RecordType>