force-app/main/default/objects/Student__c/recordTypes/EEEStudent.recordType-meta.xml
<RecordType>
    <fullName>EEEStudent</fullName>
    <active>true</active>
    <description>Electrical and Electronics Engineering.</description>
    <label>EEE Student</label>
</RecordType>