force-app/main/default/objects/Student__c/recordTypes/ITStudent.recordType-meta.xml
<RecordType>
    <fullName>ITStudent</fullName>
    <active>true</active>
    <description>Information Technology.</description>
    <label>IT Student</label>
</RecordType>