force-app/main/default/objects/Student__c/listViews/CSE.listView-meta.xml
<ListView>
    <fullName>CSE</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>branch__c</field>
        <operation>equals</operation>
        <value>CSE</value>
    </filters>
    <label>CSE</label>
</ListView>