force-app/main/default/objects/Student__c/listViews/ECE.listView-meta.xml
<ListView>
    <fullName>ECE</fullName>
    <columns>NAME</columns>
    <columns>mobile__c</columns>
    <columns>email__c</columns>
    <columns>branch__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>branch__c</field>
        <operation>equals</operation>
        <value>ECE</value>
    </filters>
    <label>ECE</label>
</ListView>