force-app/main/default/objects/Student__c/listViews/EEE.listView-meta.xml
<ListView>
    <fullName>EEE</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>branch__c</field>
        <operation>equals</operation>
        <value>EEE</value>
    </filters>
    <label>EEE</label>
</ListView>