force-app/main/default/objects/Student__c/listViews/IT.listView-meta.xml
<ListView>
    <fullName>IT</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>branch__c</field>
        <operation>equals</operation>
        <value>IT</value>
    </filters>
    <label>IT</label>
</ListView>